--- a/src/py/bio/templates/bio/index.html
+++ b/src/py/bio/templates/bio/index.html
@@ -7,9 +7,11 @@
 	<nav class="breadcrumbs" aria-label="breadcrumbs">
 		<ul>
 			<li>
-				<span><a href="/{% trans 'home/' %}"><i class="icon fas fa-home"></i>{% trans 'Home' %}</a></span>
+				<a href="/{% trans 'home/' %}"><i class="icon fas fa-home"></i>{% trans 'Home' %}</a>
 			</li>
-			<li><i class="fas fa-book"></i>{% trans 'Biography' %}</li>
+			<li>
+				<span><i class="fas fa-book"></i>{% trans 'Biography' %}</span>
+			</li>
 		</ul>
 	</nav>
 
